# pi_sdf

./: .gitignore  Cargo.toml  README.md  index.html  sdf.json  sdfinfo
examples/: Arabic_test.rs  blur.rs  cmd_util.rs  compute_arc.rs  font.rs  font_sdf_tex.rs  outer_glow.rs  rasterizer.rs  shape.rs  shape2.rs  svg.rs  svg2.rs  ttc.rs  wgpu.rs  wgpu2.rs
source/: glyphy.fs  glyphy.vs  glyphy1.fs  glyphy1.vs  outer_glow.fs  sdf.fs  sdf.vs  sdf1.fs  sdf1.vs  sdf2.fs  svg.fs  svg.vs
src/: arc_to.rs  blur.rs  font.rs  glyphy_draw.rs  glyphy_draw2.rs  lib.rs  render_path.rs  shape.rs  svg.rs  system_font.rs  utils.rs
src/glyphy/: arc_bezier.rs  blob.rs  blob_new.rs  mod.rs  outline.rs  sdf.rs  util.rs  vertex.rs
src/glyphy/geometry/: aabb.rs  arc.rs  arcs.rs  bezier.rs  line.rs  mod.rs  point.rs  segment.rs  signed_vector.rs  vector.rs
wasm/: app.js  draw_text.js  index.html
