[package]
name = "pi_sdf"
version = "0.1.28"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
# doctest = false

[dependencies]
derive-deref-rs = "0.1"
parry2d = "0.13"
log = {version = "0.4"}#, features = ["release_max_level_error"]}
allsorts = { version = "0.14", default-features = false,  features = ["flate2_rust", "outline"]}
ab_glyph_rasterizer = "0.1"
console_log = "1.0"
usvg = "0.32"
kurbo = "0.9"
bytemuck = { version = "1.4", features = [ "derive" ] }
pi_hash = {version = "0.1", features = ["xxhash"]}
serde = { version = "1.0", features = ["derive"] }
brotli-decompressor = "2.5"
bitcode = {version= "0.6", features = [ "serde" ]}
# bincode = "1.3"
web-sys = {version = "0.3", features = ["Window", "Performance"]}
pi_share = "0.4"
lyon_geom = "1.0"
# lol_alloc = {path = "../lol_alloc"}
# lol_alloc = "0.4"
talc = "=4.4.0"

[target."cfg(target_arch = \"wasm32\")".dependencies]
getrandom = {version = "0.2", features = ["js"]}
wasm-bindgen = "0.2"

# web-sys = {version = "0.3", features = ["Window", "Performance"]}


[dev-dependencies]
bincode = "1.3"
pollster = "0.3"
env_logger = "0.10"
winit = { registry = "yn", version = "0.27" }
tracing = "0.1"
tracing-subscriber = "0.3"
naga = "0.19"
pi_wgpu = { registry = "yn", version = "0.1" }
serde_json = "1.0"
image = "0.24"
brotli = "6.0"
pi_assets = "0.14"

[profile.release]
# incremental = true
# strip = true
# lto = true
# panic = "abort"
# codegen-units = 1
# opt-level = 
# debug = true

[features]
debug = []

[[example]]
name = "performance"
path = "examples/compute_arc.rs"

# [patch.yn]
# pi_wgpu = { path = "../pi_wgpu", }